# audio_data_franka

./: .gitignore  README.md  record_bag_interactive.sh
scripts/: play_bag_interactive.sh  plot_timestamps.py  preview_bag_data.py  process_bag.py  qos_override.yaml
src/audio_recorder/: package.xml  setup.cfg  setup.py
src/audio_recorder/audio_recorder/: play2.py  player_node.py  record2.py  recorder.py  utils.py
src/audio_recorder/resource/: audio_recorder
src/audio_recorder_interfaces/: CMakeLists.txt  package.xml
src/audio_recorder_interfaces/msg/: AudioData.msg
src/audio_recorder_interfaces/srv/: PlayAudio.srv  StartRecording.srv
