<?xml version="1.0"?>
<package format="3">
  <name>audio_recorder</name>
  <version>0.0.0</version>
  <description>Audio recording and playback node using custom ROS 2 services</description>
  <maintainer email="tycho.bomer@gmail.com">nakamalab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sounddevice</depend>
  <depend>soundfile</depend>
  <depend>audio_recorder_interfaces</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

