<?xml version="1.0"?>
<package format="3">
  <name>audio_recorder_interfaces</name>
  <version>0.0.0</version>
  <description>Custom messages and services for audio recording</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>

  <!-- ✅ Required so rosbag2 and rosidl see this as a message/service package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
